--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             function game(){
                 for (let i = 0; i < 5; i++){
-                    let choice = prompt("What do you wan to play?")
+                    let choice = prompt("What do you want to play?")
                     play(choice)
 
                 }
