--- a/index.html
+++ b/index.html
@@ -6,40 +6,60 @@
             function computerPlay(){
                 let randomNumber = Math.floor(Math.random() * 3) + 1  
                 if (randomNumber == 1){
-                    return "Rock"
+                    return "rock"
                 }else if (randomNumber == 2){
-                    return "Paper"
+                    return "paper"
                 }else if (randomNumber == 3){
-                    return "Scissors"
+                    return "scissors"
                 }
             }
 
             function play(playerSelection, computerSelection){
                 let player = playerSelection.toLowerCase()
-                computerSelection = computerPlay().toLowerCase()
+                computerSelection = computerPlay()
                 if(player == computerSelection){
-                    return "It's a draw!"
+                    return arr = ["It's a draw!", 2]
                 }else if(player == "scissors" && computerSelection == "paper"){
-                    return "You win!, Scissors beats Paper!"
+                    return arr = ["You win!, Scissors beats Paper!", 0]
                 }else if(player == "rock" && computerSelection == "paper"){
-                    return "You lose!, Paper beats Rock!"
+                    return arr = ["You lose!, Paper beats Rock!", 1]
                 }else if(player == "paper" && computerSelection == "rock"){
-                    return "You win!, Paper beats Rock!"
+                    return arr = ["You win!, Paper beats Rock!", 0]
                 }else if(player == "scissors" && computerSelection == "rock"){
-                    return "You lose!, Rock beats Scissors!"
+                    return arr = ["You lose!, Rock beats Scissors!", 1]
                 }else if(player == "rock" && computerSelection == "scissors"){
-                    return "You win!, Rock beats Scissors!"
+                    return  arr = ["You win!, Rock beats Scissors!", 0]
                 }else if(player == "paper" && computerSelection == "scissors"){
-                    return "You lose!, Scissors beats paper!"
+                    return arr = ["You lose!, Scissors beats paper!", 1]
                 }
             }
 
             function game(){
+                let cscore = 0
+                let pscore = 0
                 for (let i = 0; i < 5; i++){
-                    let choice = prompt("What do you want to play?")
-                    play(choice)
+                    let playerSelection = prompt("What do you want to play?")
+                    play(playerSelection)
 
+                    if(arr[1] == 0){
+                        pscore = pscore + 1
+                        console.log(arr[0])
+                    }else if (arr[1] == 1){
+                        cscore = cscore + 1
+                        console.log(arr[0])
+                    }else if (arr[1] ==  2){
+                        console.log(arr[0])
+                    }
                 }
+                    if(pscore < cscore){
+                        return "The score was: " + pscore + " to " + cscore + "! You have lost!"
+                    }else if(pscore > cscore){
+                        return "The score was: " + pscore + " to " + cscore + "! You have won!"
+                    }
+                    else if(pscore == cscore){
+                        return "The score was: " + pscore + " to " + cscore + "! It's a draw!"
+                    }
+                    
             }
         </script>
     </body>
